<resources>
    <string name="app_name">Act1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whyisthisamust">WHYISTHISAMUST</string>

    <string name="aplicaciones_de_iot">Aplicaciones de IoT</string>
    <string name="name">Nombre</string>
    <string name="joel_rodrigo">Joel Rodrigo</string>
    <string name="salcedo_cheno">Salcedo Cheno</string>

    <string name="practicas">Practicas</string>
    <string name="_0">0</string>

    <string name="hc_o5">HC-O5</string>
    <string name="devices">Devices</string>
    <string name="status">Status…</string>
    <string name="tids_5_1">TIDS 5-1</string>

    <string name="menu_home">Home</string>
    <string name="menu_p1">First Practice</string>

    <string name="nav_open">open</string>
    <string name="nav_close">close</string>

    <string-array name="spinner_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>