<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cyan">



        <ImageView
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/whyisthisamust"
            android:src="@drawable/ryan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/grupo"
            style="@style/PracticeGuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/tids_5_1"
            app:layout_constraintBottom_toTopOf="@+id/nombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nombre"
            style="@style/PracticeGuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/joel_rodrigo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grupo" />
\

</androidx.constraintlayout.widget.ConstraintLayout>